# Beato-Texture-Format-Compiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
source/: SDLGLContext.cpp  SDLGLContext.hpp  main.cpp  main.hpp  precompiled.hpp
source/BTFtexture/: BTFLoader.cpp  BTFLoader.hpp  BTFStructures.hpp  BTFimage.cpp
source/imageLoader/: imageLoader.cpp  imageLoader.hpp
